--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -40,6 +40,7 @@
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2025 - Bitacora - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            <a asp-controller="Precarga" asp-action="Seed" class="badge bg-warning">Precargar</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
