[Fix] cento eliminado de nombre de propiedades y sus referencias. [Refactor] Cambio en la generaciónd e bitácoras en la precarga.

--- a/Views/Posts/Delete.cshtml
+++ b/Views/Posts/Delete.cshtml
@@ -18,16 +18,16 @@
             @Html.DisplayFor(model => model.Notas)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FechaDeCreación)
+            @Html.DisplayNameFor(model => model.FechaDeCreacion)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FechaDeCreación)
+            @Html.DisplayFor(model => model.FechaDeCreacion)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.HoraDeCreación)
+            @Html.DisplayNameFor(model => model.HoraDeCreacion)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.HoraDeCreación)
+            @Html.DisplayFor(model => model.HoraDeCreacion)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.BitacoraAsociada)
