--- a/Views/Posts/Edit.cshtml
+++ b/Views/Posts/Edit.cshtml
@@ -19,14 +19,14 @@
                 <span asp-validation-for="Notas" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="FechaDeCreación" class="control-label"></label>
-                <input asp-for="FechaDeCreación" class="form-control" />
-                <span asp-validation-for="FechaDeCreación" class="text-danger"></span>
+                <label asp-for="FechaDeCreacion" class="control-label"></label>
+                <input asp-for="FechaDeCreacion" class="form-control" />
+                <span asp-validation-for="FechaDeCreacion" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="HoraDeCreación" class="control-label"></label>
-                <input asp-for="HoraDeCreación" class="form-control" />
-                <span asp-validation-for="HoraDeCreación" class="text-danger"></span>
+                <label asp-for="HoraDeCreacion" class="control-label"></label>
+                <input asp-for="HoraDeCreacion" class="form-control" />
+                <span asp-validation-for="HoraDeCreacion" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="BitacoraId" class="control-label"></label>
