--- a/Views/Posts/Index.cshtml
+++ b/Views/Posts/Index.cshtml
@@ -16,10 +16,10 @@
                 @Html.DisplayNameFor(model => model.Notas)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.FechaDeCreación)
+                @Html.DisplayNameFor(model => model.FechaDeCreacion)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.HoraDeCreación)
+                @Html.DisplayNameFor(model => model.HoraDeCreacion)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.BitacoraAsociada)
@@ -34,10 +34,10 @@
                 @Html.DisplayFor(modelItem => item.Notas)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.FechaDeCreación)
+                @Html.DisplayFor(modelItem => item.FechaDeCreacion)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.HoraDeCreación)
+                @Html.DisplayFor(modelItem => item.HoraDeCreacion)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.BitacoraAsociada.NombreDeBitacora)
