--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -15,19 +15,45 @@
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Bitacora</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
+                aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                <div class="navbar-collapse collapse d-sm-inline-flex">
                     <ul class="navbar-nav flex-grow-1">
+
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-controller="Bitacoras" asp-action="Index">Bitacoras</a>
                         </li>
+
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Posts" asp-action="Index">Posts</a>
                         </li>
-                        <li>
-                            <a class="nav-link text-dark" asp-controller="Bitacoras" asp-action="Index">Bitacoras</a>
+                        
+                    </ul>
+                    <ul class="navbar-nav flex-grow-2">
+                        <li class="nav-item dropdown-center">
+
+                            <button class="btn btn-outline-secondary nav-link dropdown-toggle" type="button" id="navbarDropdown" data-bs-toggle="dropdown" aria-expanded="false" data-bs-offset="10,20">
+                                Opciones
+                            </button>
+
+                            <ul class="dropdown-menu dropdown-menu-md-end" aria-labelledby="navbarDropdown">
+                                @if (User.Identity is not null && !User.Identity.IsAuthenticated)
+                                {
+                                    <li>
+                                        <a class="dropdown-item" asp-controller="Account" asp-action="IniciarSesion">Iniciar Sesión</a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" asp-controller="Account" asp-action="Registrar">Registrarse</a>
+                                    </li>
+                                }
+                                else
+                                {
+                                    <li>
+                                        <a class="dropdown-item" asp-controller="Account" asp-action="CerrarSesion">Cerrar Sesión</a>
+                                    </li>
+                                }
+                            </ul>
                         </li>
                     </ul>
                 </div>
