Se agrega la vista a los Posts realizados

--- a/Views/Bitacoras/Index.cshtml
+++ b/Views/Bitacoras/Index.cshtml
@@ -40,6 +40,7 @@
                 <a asp-action="Edit" asp-route-id="@item.BitacoraId">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.BitacoraId">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.BitacoraId">Delete</a>
+                <a asp-action="PostsInput" asp-route-id="@item.BitacoraId">realizarPost</a>
             </td>
         </tr>
 }
