Agregada la redirección desde BitacoraController a  PostsController.

--- a/Views/Bitacoras/Index.cshtml
+++ b/Views/Bitacoras/Index.cshtml
@@ -39,8 +39,8 @@
             <td>
                 <a asp-action="Edit" asp-route-id="@item.BitacoraId">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.BitacoraId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.BitacoraId">Delete</a>
-                <a asp-action="PostsInput" asp-route-id="@item.BitacoraId">realizarPost</a>
+                <a asp-action="Delete" asp-route-id="@item.BitacoraId">Delete</a> |
+                <a asp-action="RedireccionAPosts" asp-route-id="@item.BitacoraId">Realizar Posts</a>
             </td>
         </tr>
 }
