--- a/Views/Posts/Index.cshtml
+++ b/Views/Posts/Index.cshtml
@@ -5,64 +5,58 @@
     var bitacoraId = ViewBag.BitacoraId as int?;
 }
 
-<h1>Index</h1>
+<h1>@ViewBag.NombreBitacora</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
+<table class="table table-striped table-hover tabla-redondeada">
+    <thead class="table-dark">
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Notas)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.FechaDeCreacion)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.HoraDeCreacion)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.BitacoraAsociada)
-            </th>
-            <th></th>
+            <th class="col-8">Entradas</th>
+            <th class="col-1 text-center">Fecha</th>
+            <th class="col-1 text-center">Hora</th>
+            <th class="col-1 text-center"></th>
         </tr>
     </thead>
     <tbody>
 @foreach (var item in Model) {
         <tr>
-            <td>
+            <td class="col-8">
                 @Html.DisplayFor(modelItem => item.Notas)
             </td>
-            <td>
+            <td class="col-1 text-center">
                 @Html.DisplayFor(modelItem => item.FechaDeCreacion)
             </td>
-            <td>
+                <td class="col-1 text-center">
                 @Html.DisplayFor(modelItem => item.HoraDeCreacion)
             </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.BitacoraAsociada.NombreDeBitacora)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.PostID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.PostID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.PostID">Delete</a>
+            <td class="col-1 text-center">
+                <div class="dropdown-center">
+                    <a class="btn btn-sm btn-outline-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+                        ...
+                    </a>
+                    <ul class="dropdown-menu dr" aria-labelledby="dropdownMenuLink">
+                        <li class="text-center"><a asp-action="Edit" asp-route-id="@item.PostID" class="dropdown-item">Editar</a> </li>
+                        <li class="text-center"><a asp-action="Details" asp-route-id="@item.PostID" class="dropdown-item">Detalles</a></li>
+                        <li class="text-center"><a asp-action="Delete" asp-route-id="@item.PostID" class="dropdown-item text-danger">Eliminar</a></li>
+                    </ul>
+                </div>
             </td>
         </tr>
 }
     </tbody>
 </table>
-<div class="row">
-    <div class="col-md-4">
+<div class="row sticky-form">
+    <div class="col-lg-7 mx-auto">
         <form asp-action="Create" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label for="nota">Nota:</label>
-                <input name="nota" class="form-control" required />
-            </div>
-            <input type="hidden" name="id" value="@bitacoraId" />
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <div class="input-group">
+                    <input name="nota" class="form-control" placeholder="Ingresa tu nueva entrada!" autofocus required />
+                    <input type="hidden" name="id" value="@bitacoraId" />
+                    <div class="input-group-append">
+                        <input type="submit" value="Crear nota" class="btn btn-outline-primary" />
+                    </div>
+                </div>
+                
             </div>
         </form>
     </div>
@@ -73,3 +67,13 @@
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
 }
+<!--
+    <div class="form-group">
+                <label for="nota">Nota:</label>
+                <input name="nota" class="form-control" placeholder="Ingresa tu nueva entrada!" required />
+            </div>
+            <input type="hidden" name="id" value="@bitacoraId" />
+            <div class="form-group">
+                <input type="submit" value="Crear nota" class="btn btn-outline-primary" />
+            </div>
+-->
