--- a/Views/Bitacoras/Index.cshtml
+++ b/Views/Bitacoras/Index.cshtml
@@ -9,38 +9,40 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-<table class="table">
+<table class="table table-striped table-hover tabla-redondeada">
     <thead>
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.NombreDeBitacora)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.FechaDeCreacion)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.HoraDeCreacion)
-            </th>
-            <th></th>
+            <th class="col-8">Nombre de la bitácora</th>
+            <th class="col-1 text-center">Fecha</th>
+            <th class="col-1 text-center">Hora</th>
+            <th class="col-1 text-center"></th>
         </tr>
     </thead>
     <tbody>
 @foreach (var item in Model) {
         <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.NombreDeBitacora)
+            <td class ="col-8">
+                <a asp-action="RedireccionAPosts" asp-route-id="@item.BitacoraId" class="btn btn-outline-link text-decoration-none fw-bold text-primary">
+                    @Html.DisplayFor(modelItem => item.NombreDeBitacora)
+                </a>
             </td>
-            <td>
+                <td class="col-1 text-center">
                 @Html.DisplayFor(modelItem => item.FechaDeCreacion)
             </td>
-            <td>
+                <td class="col-1 text-center">
                 @Html.DisplayFor(modelItem => item.HoraDeCreacion)
             </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.BitacoraId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.BitacoraId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.BitacoraId">Delete</a> |
-                <a asp-action="RedireccionAPosts" asp-route-id="@item.BitacoraId">Realizar Posts</a>
+            <td class="col-1 text-center">
+                <div class="dropdown-center">
+                    <a class="btn btn-sm btn-outline-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+                        ...
+                    </a>
+                    <ul class="dropdown-menu dr" aria-labelledby="dropdownMenuLink">
+                        <li class="text-center"><a asp-action="Edit" asp-route-id="@item.BitacoraId" class="dropdown-item">Editar</a> </li>
+                        <li class="text-center"><a asp-action="Details" asp-route-id="@item.BitacoraId" class="dropdown-item">Detalles</a></li>
+                        <li class="text-center"><a asp-action="Delete" asp-route-id="@item.BitacoraId" class="dropdown-item text-danger">Eliminar</a></li>
+                    </ul>
+                </div>
             </td>
         </tr>
 }
