--- a/Views/Bitacoras/Create.cshtml
+++ b/Views/Bitacoras/Create.cshtml
@@ -8,8 +8,8 @@
 
 <h4>ModeloBitacora</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
+<div class="card row">
+    <div class="col-md-4 justify-content-center">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -17,18 +17,13 @@
                 <input asp-for="NombreDeBitacora" class="form-control" />
                 <span asp-validation-for="NombreDeBitacora" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="FechaDeCreacion" class="control-label"></label>
-                <input asp-for="FechaDeCreacion" class="form-control" />
-                <span asp-validation-for="FechaDeCreacion" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="HoraDeCreacion" class="control-label"></label>
-                <input asp-for="HoraDeCreacion" class="form-control" />
-                <span asp-validation-for="HoraDeCreacion" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="form-group row justify-content-between m-2">
+                <div class="col-4 justify-contetn-start">
+                    <input type="submit" value="Create" class="btn btn-primary text-start" />
+                </div>
+                <div class="col-4 justify-content-end">
+                    <a class="btn btn-primary" asp-action="Index">Back to List</a>
+                </div>
             </div>
         </form>
     </div>
