--- a/Views/Bitacoras/Index.cshtml
+++ b/Views/Bitacoras/Index.cshtml
@@ -1,14 +1,20 @@
 ﻿@model IEnumerable<Bitacora.Models.ModeloBitacora>
 
 @{
+
     ViewData["Title"] = "Index";
+    string nombreUsuario = "usuario";
+    if (User.Identity.IsAuthenticated)
+    {
+        nombreUsuario = User.Identity.Name;    
+    }
 }
 
-<h1>Index</h1>
+<h1>Bitacoras de @nombreUsuario</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+<div class="btn-in-div">
+    <a class="btn btn-outline-success" asp-action="Create">Create New</a>
+</div>
 <table class="table table-striped table-hover tabla-redondeada">
     <thead>
         <tr>
