[Migración] Se cambian los modelos/vistas/controlador de Bitacora y Post. Nueva propiedad "TimeStamp".

--- a/Views/Bitacoras/Create.cshtml
+++ b/Views/Bitacoras/Create.cshtml
@@ -24,7 +24,7 @@
                             <input type="submit" value="Create" class="btn btn-outline-primary text-start" />
                         </div>
                         <div class="col-6 text-end">
-                            <a onfocus="" class="btn btn-outline-secondary" asp-action="Index">Back to List</a>
+                            <a onfocus="" class="btn btn-outline-secondary" asp-action="Index">Volver</a>
                         </div>
                     </div>
                 </form>
