--- a/Views/Posts/Index.cshtml
+++ b/Views/Posts/Index.cshtml
@@ -13,8 +13,7 @@
         <thead class="table-dark">
             <tr>
                 <th class="col-8">Entradas</th>
-                <th class="col-1 text-center">Fecha</th>
-                <th class="col-1 text-center">Hora</th>
+                <th class="col-1 text-center">Última modificación</th>
                 <th class="col-1 text-center"></th>
             </tr>
         </thead>
@@ -25,10 +24,7 @@
                         @Html.DisplayFor(modelItem => item.Notas)
                     </td>
                     <td class="col-1 text-center">
-                        @Html.DisplayFor(modelItem => item.FechaDeCreacion)
-                    </td>
-                    <td class="col-1 text-center">
-                        @Html.DisplayFor(modelItem => item.HoraDeCreacion)
+                        @Html.DisplayFor(modelItem => item.UltimaModificacion)
                     </td>
                     <td class="col-1 text-center">
                         <div class="dropdown-center">
