--- a/Views/Bitacoras/Delete.cshtml
+++ b/Views/Bitacoras/Delete.cshtml
@@ -18,22 +18,22 @@
             @Html.DisplayFor(model => model.NombreDeBitacora)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FechaDeCreacion)
+            Creación
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FechaDeCreacion)
+            @Html.DisplayFor(model => model.TimeStamp)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.HoraDeCreacion)
+            Última modificación
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.HoraDeCreacion)
+            @Html.DisplayFor(model => model.UltimaModificacion)
         </dd>
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="BitacoraId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Eliminar" class="btn btn-danger" /> |
+        <a asp-action="Index">Volver</a>
     </form>
 </div>
