--- a/Views/Bitacoras/Edit.cshtml
+++ b/Views/Bitacoras/Edit.cshtml
@@ -19,24 +19,14 @@
                 <span asp-validation-for="NombreDeBitacora" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="FechaDeCreacion" class="control-label"></label>
-                <input asp-for="FechaDeCreacion" class="form-control" />
-                <span asp-validation-for="FechaDeCreacion" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="HoraDeCreacion" class="control-label"></label>
-                <input asp-for="HoraDeCreacion" class="form-control" />
-                <span asp-validation-for="HoraDeCreacion" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Guardar" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Volver</a>
 </div>
 
 @section Scripts {
