--- a/Views/Posts/Details.cshtml
+++ b/Views/Posts/Details.cshtml
@@ -11,25 +11,24 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Notas)
+            Nota
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Notas)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FechaDeCreacion)
+            Creación
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FechaDeCreacion)
+            @Html.DisplayFor(model => model.TimeStamp)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.HoraDeCreacion)
+        <dt class="col-sm-2">
+            Última modificación
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.HoraDeCreacion)
-        </dd>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.UltimaModificacion)
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.BitacoraAsociada)
+            Bitácora asociada
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.BitacoraAsociada.NombreDeBitacora)
@@ -37,6 +36,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.PostID">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.PostID">Editar</a> |
+    <a asp-action="Index">Volver</a>
 </div>
